# gfx-converter

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE  README.md
gfx-convert/: main.cpp
gfx-convert.xcodeproj/: project.pbxproj
gfx-convert.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gfx-convert.xcodeproj/project.xcworkspace/xcuserdata/dillo.xcuserdatad/: UserInterfaceState.xcuserstate
gfx-convert.xcodeproj/xcshareddata/xcschemes/: gfx-convert.xcscheme
gfx-convert.xcodeproj/xcuserdata/dillo.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Bitmap.cc  Bitmap.h  CMakeLists.txt  Charset.cc  Charset.h  Commandline.cc  Exception.cc  Exception.h  Image.cc  Image.h  Matrix.cc  Matrix.h  Noter.cc  Noter.h  Palette.cc  Palette.h  SpriteSheet.cc  SpriteSheet.h  TextScreen.cc  TextScreen.h  main.cc  read.h  read_png.cc  read_png.h  read_printfox.cc  read_raw.cc  read_raw_charset.cc  utils.cc  utils.h  write_png.cc  write_png.h
